<resources>
    <string name="app_name">Aku Punya Tugas Akhir</string>
    <string name="tv_menyapa_pemain">Selamat Sore !</string>
    <string name="tv_nama_pemain">Azis Jabbar Susetio</string>
    <string name="text_level_anda">Anda berada pada level </string>
    <string name="misi_selesai">Misi Selesai</string>
    <string name="misi_aktif">Misi AKtif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TOAST_PETUNJUK">Silahkan dekatkan kartu anda pada perangkat android anda</string>
    <string name="penjelasankartu">penjelasan kartunya adalah sebagai berikut : Silahkan maju ke salah satu guru anda dan baca kata kata yang ada di kartu ini, setelah itu silahkan lakukan penyetoran misi ke pembimbing anda yang berada di kantor kepala sekolah di sampingnya satpam kantin kampus PENS di surabaya</string>
    <string name="text_misi_masuk_pada_tanggal">Misi dimasukkan pada  : </string>
    <string name="tv_yourPoint">POIN ANDA</string>
    <string name="not_yet_started">Belum Dimulai</string>
    <string name="error_message_name">Masukan data yang benar</string>
    <string name="error_message_email">Masukkan email yang valid</string>
    <string name="error_message_password">Masukkan password yang valid</string>
    <string name="error_password_match">Password anda tidak sama</string>

    <!-- Data Awal -->


</resources>
