<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".test.Activity.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_menyapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"

            android:text="@string/tv_menyapa_pemain"/>

        <TextView
            android:id="@+id/tv_pemain_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"

            android:fontFamily="cursive"
            android:text="@string/tv_nama_pemain"
            android:textSize="30dp"
            android:typeface="normal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_level_anda"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_pemain_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/pb2_experience"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/colorPrimaryDark"
                android:progressTint="@color/colorPrimary"
                android:progress="60"/>

        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_misi_aktif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="3"
                android:padding="10dp"
                android:text="@string/misi_aktif"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/misi_selesai"
                android:textSize="30sp"
                android:textStyle="bold"


                />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_weight="1"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_db"
            android:text="db"
            android:hint="database"
            android:textColor="@android:color/holo_green_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btn_log_out"
            android:text="log out"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>